# GANTutorial

./: .gitignore  README.md  pyproject.toml
DS_libraries/: Matplotlib_GUIDE.ipynb  NumPy_GUIDE.ipynb  Pandas_GUIDE.ipynb
University_tasks/: TASK 11 Spark ML.ipynb  TASK 2 Regression.ipynb  TASK 5 Clustering.ipynb  TASK 7 Functional programming.ipynb  TASK 8 MapReduce.ipynb  TASK 9 NLTK.ipynb
notes/libs/: Matplotlib.ipynb
notes/playground/: 01_Neural_Network_Theory.ipynb
notes/tasks/: 01_Data_Profiling.ipynb  03_Classification_Part_1.ipynb  04_Classification_Part_2.ipynb  06_Parsing.ipynb  10_Spark.ipynb  12_Record_Matching.ipynb
